# mazalot

./: .gitignore  Cargo.toml  README.md  index.html
core/: Cargo.toml
core/src/: lib.rs
crates/asteroid/: Cargo.toml
crates/asteroid/src/: lib.rs  wasm.rs
crates/asteroid/web/: asteroid.wasm  index.html
crates/bird/: Cargo.toml
crates/bird/src/: lib.rs  wasm.rs
crates/bird/web/: bird.wasm  dump.mjs  index.html  verify.mjs
crates/character/: Cargo.toml
crates/character/src/: main.rs
crates/comet/: Cargo.toml
crates/comet/src/: lib.rs  wasm.rs
crates/comet/web/: comet.wasm  index.html
crates/galaxy/: Cargo.toml
crates/galaxy/src/: lib.rs  wasm.rs
crates/galaxy/web/: galaxy.wasm  index.html  solar.wasm  verify.mjs
crates/moon/: Cargo.toml
crates/moon/src/: lib.rs  wasm.rs
crates/moon/web/: index.html  moon.wasm
crates/orbit/: Cargo.toml
crates/orbit/src/: lib.rs  wasm.rs
crates/orbit/web/: index.html  orbit.wasm
crates/planet/: Cargo.toml
crates/planet/src/: lib.rs  wasm.rs
crates/planet/web/: index.html  verify.mjs
crates/solar/: Cargo.toml
crates/solar/src/: lib.rs  wasm.rs
crates/solar/web/: index.html  solar.wasm  verify.mjs
crates/star/: Cargo.toml
crates/star/src/: lib.rs  wasm.rs
crates/star/web/: index.html  star.wasm  verify.mjs
docs/: artifacts.md
scripts/: make-artifact.sh
web/: Cargo.toml  index.html  planet.wasm
web/src/: lib.rs
