[package]
name = "sprite-compositor"
version = "0.1.0"
edition = "2021"

# Native generator (character compositor + planet GIF/PNG generator).
# Shares all planet logic with the web build via the `planet-core` crate.

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
rand = "0.8"
rand_chacha = "0.3"
planet-core = { path = "core" }

[workspace]
members = ["core", "web"]

[profile.release]
opt-level = 3
lto = true
