# Virtual workspace — no root package. Each crate under crates/ is one
# self-contained "type": a pure-math lib + a wasm C-ABI face + native bins,
# gated so the wasm build stays dependency-free.
#
#   crates/planet    — procedural planets (bins: planet, bench) + wasm
#   crates/star      — procedural stars/suns (bin: sun) + wasm
#   crates/bird      — alien/earth-bird creatures (bins: alien, bird) + wasm
#   crates/character — paper-doll character compositor (native only)
#
# The "type" crates share no code — only third-party deps and this manifest.
[workspace]
resolver = "2"
members = ["crates/planet", "crates/star", "crates/bird", "crates/character"]

[profile.release]
opt-level = 3
lto = true
