[package]
name = "planet-core"
version = "0.1.0"
edition = "2021"

# Pure planet-generation logic. No dependencies — no `image`, no wasm glue.
# Both the native generator and the web WASM build depend on this one crate,
# so the algorithm and the 26-type table live in exactly one place.

[dependencies]
